--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,8 @@
   "author": "Sayan Saha",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "dotenv": "^9.0.2",
+    "express": "^4.17.1",
+    "pg": "^8.6.0"
   }
 }
