Create login and registration routes

--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "joi": "^17.4.0",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.6.0"
   }
 }
