--- a/server/package.json
+++ b/server/package.json
@@ -9,8 +9,10 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "date-fns": "^2.22.1",
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
+    "googleapis": "^75.0.0",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.6.0"
