--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "date-fns": "^2.22.1",
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
